[package]
name = "leetcode_evals"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
cookie = "0.17.0"
governor = "0.6.0"
indicatif = "0.17.5"
lazy_static = "1.4.0"
once_cell = "1.18.0"
polar = "0.0.0"
polars = "0.31.1"
regex = "1.8.4"
reqwest = { version = "0.11.18", features = ["json", "serde_json"] }
serde_json = "1.0.97"
thirtyfour = "0.31.0"
tokio = { version = "1.28.2", features = ["full"] }
